enum Goal
{
    TEST
}
// Il faudra voir les 24 objectifs à mettre en analysant l'image sur le sujet