package app.model;

public interface BoardObserver {
    void updateBoard(Board b);
}
